# web

./: .gitignore  Cargo.toml  LICENSE  README.md  big.csv  data.csv  flake.nix
migrations/: 20230925041801_init-data.sql
sqlite@localhost/: sqlite.db
src/: entity.rs  error.rs  lib.rs  logic.rs  main.rs  query.rs
