[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "http2", "tracing"] }
csv-async = { version = "1.2.6", features = ["tokio"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
futures = "0.3.28"
rust_decimal = { version = "1.32.0", features = ["serde-with-float", "serde-with-str", "serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite", "json"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
